# mistral-ocr-pipeline

./: .gitignore  CLAUDE.md  README.md  extraction_payload.py  extration_payload.py  generate_output.ipynb  get_annotations.py  main.py  post_processing.py  pyproject.toml  sbom.json  test.ipynb  to_markdown.py  unstack_payloads.py  utils.py
info_extraction/: extraction_payload.py  get_annotations.py  to_markdown.py
info_extraction/schemas/: __init__.py  _common.py  diagnostic.py  meta_design.py  methods.py  outcomes.py  population.py
post_processing/: compare_results.py  post_processing.py  unstack_payloads.py
pre_processing/: main.py
pre_processing/pdf_section_stripper/: config.py  heading_detector.py  models.py  outline_detector.py  pipeline.py  planner.py  writer.py
tests/: conftest.py  test_extraction_models.py  test_merge.py  test_resume_index.py
utils/: abstract_diagram.py  diagram.py  high_level_diagram.py  utils.py
