[project]
name = "ie-mistral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alive-progress>=3.3.0",
    "dotenv>=0.9.9",
    "ipython>=9.6.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mistralai>=1.9.11",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pre-commit>=4.4.0",
    "pyarrow>=21.0.0",
    "pypdf[crypto]>=6.1.1",
    "rich>=14.2.0",
    "ruff>=0.14.4",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "winloop>=0.3.1",
]
