[project]
name = "ie-mistral"
version = "0.1.0"
description = "Async pipeline for OCR-driven extraction from scientific PDFs using Mistral OCR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "loguru>=0.7.3",
    "mistralai>=1.9.11",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pymupdf>=1.26.7",
    "pypdf[crypto]>=6.1.1",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.14.3",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "winloop>=0.3.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
]
notebooks = [
    "alive-progress>=3.3.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
]
